# sl-terminal

./: CMakeLists.txt  SLResponse.c  SLResponse.h  curl.c  curl.h  gui.c  gui.h  main.c  platsuppslag.c  platsuppslag.h  realtidsinfo.c  realtidsinfo.h
